tests/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-cid-with.scillib
library TestLib

type House =
| Kind String
